worked on webpage

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Amairy R. Fletcher</title>
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+
+      </nav>
+      <main>
+        <div class="sidebar"> 
+          <img src="">
+        </div>
+        <div class="content">
+          <h2>amairy fletcher</h2>
+          <p>junior at gwc highschool</p>
+          <div id="interests">
+            <h3>Interests</h3>
+            <ul>
+              <li>hairstylest</li>
+              <li>majorette</li>
+              <li>dancer</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
