--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -16,7 +16,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			/* Change me! */
+			/* 10px */
 			left: 0px;
 		}
 
@@ -66,7 +66,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+                  var positionX = 0;
+				  var points = 0;
+				  var speed = 10;
 
 
 			/* 
@@ -86,7 +88,16 @@
 			*/
 			function handleBoxClick() {
 
-
+                 function update()     {
+					positionX = positionX + speed;
+					moveBoxTo(positionX);
+					if (positionX > boardWidth) {
+						speed = speed * -1
+					}
+				 }
+				 else if (positionX < 0) {
+					speed = speed * -1
+				 }
 			};
 
 
